@@ -431,9 +431,10 @@ setMethod("devClose", signature(device="svgDevice"),
 # User Functions
 #################
 
-openSVGDev <- function(name="Rplots.svg", width=6, height=6) {
-    res <- par("cra")[1]/par("cin")[1]
-    # par("cra")[2]/par("cin")[2]*height))
+openSVGDev <- function(name="Rplots.svg", width=6, height=6, res = NULL) {
+    if (is.null(res))
+        res <- par("cra")[1]/par("cin")[1]
+        # par("cra")[2]/par("cin")[2]*height))
     
     new("svgDevice",
         width=width, height=height,
