@@ -32,6 +32,14 @@ Changes from 0.9 to 1.0-0
 
 10. All markup-based output is now written using the XML package. (Simon)
 
+11. Added a new option to 'gridToSVG', 'res'. This sets the device
+    resolution so that we can reproduce plots regardless of the source
+    device that 'gridToSVG' grabs a grid scene from. (Simon)
+
+12. Added a new option to 'gridSVG', 'indent'. This either exports SVG
+    with hierarchical indentation, or none at all. All output occurs in
+    one line in the case that the 'indent' option is 'FALSE'. (Simon)
+
 
 Changes from 0.9-0 to 0.9-4
 ===========================
